--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -65,7 +65,7 @@
 .header__search input {
     background: transparent;
     border: none;
-    padding: 0px 100px 0 12px;
+    padding: 0 100px 0 12px;
     color: #fff;
     text-overflow: ellipsis;
     overflow: hidden;
